[package]
name = "rippify"
version = "0.1.0"
edition = "2021"
authors = ["Antonio de Haro"]
license = "MIT"
description = "Downloads songs from Spotify to ogg files (requires premium account)"
keywords = ["spotify"]
repository = "https://github.com/DarthChungo/rippify"
readme = "README.md"

[dependencies]
getopts = "0.2"
debug_print = "1.0.0"
tokio = { version = "1.28.0", features = ["full"] }
librespot-core = { git = "https://github.com/librespot-org/librespot.git", rev = "c964102" }
librespot-metadata = { git = "https://github.com/librespot-org/librespot.git", rev = "c964102" }
librespot-audio = { git = "https://github.com/librespot-org/librespot.git", rev = "c964102" }
oggvorbismeta = "0.1.0"
colored = "2.0.0"
regex = "1.8.3"
